fix: remove unnecessary scrollbar (#42)
* fix: remove unnecessary scrollbar

* fix: remove height on app--extension

--- a/src/styles.less
+++ b/src/styles.less
@@ -18,7 +18,6 @@ body {
 
 .app--extension {
   width: @extension-width !important;
-  height: @extension-height;
 }
 
 body,
